--- a/data/categorias.yml
+++ b/data/categorias.yml
@@ -2,3 +2,6 @@
 - Festivales:
     _slug: festivales
     seo_title: Festivales
+- Internacionales:
+    _slug: internacionales
+    seo_title: Noticias Internacionales
