--- a/data/convocatorias.yml
+++ b/data/convocatorias.yml
@@ -1,1 +1,8 @@
---- []
+---
+- Convocatoria del IMCINE para el Programa de Estímulo a Creadores Cinematográficos 2014:
+    _slug: convocatoria-del-imcine-para-el-programa-de-estimulo-a-creadores-cinematograficos-2014
+    fecha: 01/20/2014
+    publicado: true
+    imagen_destacada: /samples/convocatorias/convocatoria-del-imcine-para-el-programa-de-estimulo-a-creadores-cinematograficos-2014/smartresize.jpeg
+    descripcion: <p>Esta es la descripci&oacute;n de la convocatoria.&nbsp;</p>
+    documento_1: /samples/convocatorias/convocatoria-del-imcine-para-el-programa-de-estimulo-a-creadores-cinematograficos-2014/37850.pdf
