Actualización de modelos y sliders

--- a/app/content_types/categorias.yml
+++ b/app/content_types/categorias.yml
@@ -20,5 +20,5 @@ fields:
     localized: false
     class_name: noticias
     order_by:
-    - created_at
-    - desc
+    - position_in_categoria
+    - asc
