--- a/data/noticias.yml
+++ b/data/noticias.yml
@@ -1,17 +1,5 @@
 ---
 - HAY UNA REAPROXIMACIÓN DEL CINE MEXICANO CON EL ESPECTADOR:
-    _slug: hay-una-reaproximacion-del-cine-mexicano-con-el-espectador
-    fecha_de_publicacion: 01/23/2014 12:35
-    publicado: true
-    descripcion: <p>El titular del Imcine habl&oacute; sobre el &eacute;xito reciente
-      de la cinematograf&iacute;a nacional durante&nbsp;la ponencia "Los retos...</p>
-    texto: <p>El titular del Imcine habl&oacute; sobre el &eacute;xito reciente de
-      la cinematograf&iacute;a nacional durante&nbsp;la ponencia "Los retos...</p>
-    imagen_destacada: /samples/noticias/hay-una-reaproximacion-del-cine-mexicano-con-el-espectador/slider3.jpg
-    fotos:
-    - img2
-    categoria: internacionales
-- HAY UNA REAPROXIMACIÓN DEL CINE MEXICANO CON EL ESPECTADOR:
     _slug: hay-una-reaproximaci-n-del-cine-mexicano-con-el-espectador
     fecha_de_publicacion: 01/23/2014 12:26
     publicado: true
@@ -44,3 +32,75 @@
     imagen_destacada: /samples/noticias/presencia-de-filmes-mexicanos-en-festivales-internacionales/imcine.jpg
     fotos: []
     categoria: festivales
+- HAY UNA REAPROXIMACIÓN DEL CINE MEXICANO CON EL ESPECTADOR:
+    _slug: hay-una-reaproximacion-del-cine-mexicano-con-el-espectador
+    fecha_de_publicacion: 01/23/2014 12:35
+    publicado: true
+    descripcion: <p>El titular del Imcine habl&oacute; sobre el &eacute;xito reciente
+      de la cinematograf&iacute;a nacional durante&nbsp;la ponencia "Los retos...</p>
+    texto: <p>El titular del Imcine habl&oacute; sobre el &eacute;xito reciente de
+      la cinematograf&iacute;a nacional durante&nbsp;la ponencia "Los retos...</p>
+    imagen_destacada: /samples/noticias/hay-una-reaproximacion-del-cine-mexicano-con-el-espectador/slider3.jpg
+    fotos:
+    - img2
+    categoria: internacionales
+- CÁSESE QUIEN PUEDA, UN FILME SOBRE LAS VICISITUDES PARA ENCONTRAR EL AMOR EN PAREJA:
+    _slug: casesequienpueda
+    fecha_de_publicacion: 02/11/2014 00:00
+    publicado: false
+    descripcion: <p>Marco Polo Constandse dirige esta comedia rom&aacute;ntica que
+      se estrenar&aacute; con mil copias este 14 de febrero</p>
+    texto: "<p style=\"text-align: justify;\">*La cinta es producida, escrita y protagonizada
+      por Martha Higareda &nbsp;</p>\r\n<p style=\"text-align: justify;\">*Marco Polo
+      Constandse dirige esta comedia rom&aacute;ntica que se estrenar&aacute; con
+      mil copias este 14 de febrero</p>\r\n<p style=\"text-align: justify;\">Su pasi&oacute;n
+      es la actuaci&oacute;n, pero gracias a que quer&iacute;a aprender a escoger
+      mejor los guiones en los que participar&iacute;a, &nbsp;Martha Higareda comenz&oacute;
+      a estudiar gui&oacute;n en la Universidad de California y as&iacute; poco a
+      poco le interes&oacute; escribir sus propias historias y producirlas.</p>\r\n<p
+      style=\"text-align: justify;\">En el 2010 entreg&oacute; su primera pel&iacute;cula&nbsp;<em>Te
+      presento a Laura y&nbsp;</em>ahora este 14 de febrero se estrenar&aacute; con
+      mil copias&nbsp;<em>C&aacute;sese quien pueda</em>, una comedia rom&aacute;ntica,
+      dirigida por Marco Polo Constandse.</p>\r\n<p style=\"text-align: justify;\">La
+      cinta habla de dos chicas que quieren encontrar el amor, &ldquo;pero antes tienes
+      qu&eacute; saber qu&eacute; quieres contigo mismo. Puedes hacer planes en la
+      vida, &nbsp;pero a veces la vida tiene mejores planes para ti, como en una frase
+      de la pel&iacute;cula, &acute;lo esperado no pasa, sino lo inesperado es lo
+      que te cambia la vida&acute;&rdquo;, considera Higareda.</p>\r\n<p style=\"text-align:
+      justify;\">La protagonista de&nbsp;<em>Amarte duele</em>, recuerda que desde
+      que comenz&oacute; a escribir &nbsp;estaba convencida en querer escribir drama
+      &ldquo;pero por alg&uacute;n motivo natural se me ha dado m&aacute;s escribir
+      comedia&rdquo;, pero al momento de desarrollar el gui&oacute;n de&nbsp;<em>C&aacute;sese
+      quien pueda</em>, Martha estaba segura de que este proyecto ser&iacute;a la
+      mejor manera de cumplir un sue&ntilde;o, el de trabajar y compartir el set con
+      su hermana Miriam.</p>\r\n<p style=\"text-align: justify;\">El proyecto fue
+      creciendo y despu&eacute;s de convocar al director Marco Polo Constandse, &nbsp;se
+      convenci&oacute; a los actores como Luis Gerardo M&eacute;ndez, Michel Brown,
+      Juan Pablo Medida y Fernando Luj&aacute;n, para que se embarcaran en&nbsp;<em>C&aacute;sese
+      quien pueda</em>, &nbsp;ante la claridad que tiene Martha Higareda de que las
+      pel&iacute;culas se hacen en equipo, &ldquo;lo que m&aacute;s me interesa es
+      entretener y divertir a la gente&rdquo;.</p>\r\n<p style=\"text-align: justify;\">La
+      cinta representa la &oacute;pera prima de Marco Polo Constandse y es una producci&oacute;n
+      de Selva Pictures, Sin Sentido Films, adem&aacute;s de contar del respaldo del
+      Instituto Mexicano de Cinematograf&iacute;a (IMCINE), a trav&eacute;s&nbsp;de&nbsp;&nbsp;los
+      recursos del &nbsp;Eficine 226, en la cual se narra la historia de dos hermanas
+      totalmente diferentes pero que buscan encontrar el amor, sin embargo una serie
+      de enga&ntilde;os y equ&iacute;vocos las podr&aacute;n en situaciones que las
+      llevar&aacute;n a cambiar su manera de pensar y enfrentar el mundo de la pareja.</p>\r\n<p
+      style=\"text-align: justify;\">Para el realizador el cine mexicano est&aacute;
+      pasando por un momento muy afortunado, porque el cine comercial est&aacute;
+      funcionando en cartelera, como sucedi&oacute; el a&ntilde;o pasado con&nbsp;<em>Nosotros
+      los nobles, No se aceptan devoluciones, No s&eacute; si cortarme las venas o
+      dej&aacute;rmelas largas, Amor a primera visa y&nbsp;</em>ahora este 2014<em>&nbsp;</em>con<em>&nbsp;&iquest;Qu&eacute;
+      le dijiste a Dios?.</em></p>\r\n<p style=\"text-align: justify;\">Hay una comunicaci&oacute;n
+      interesante con el p&uacute;blico, afirma Marco Polo Constandse, porque adem&aacute;s
+      el cine de un corte m&aacute;s art&iacute;stico como&nbsp;<em>Heli</em>&nbsp;o&nbsp;<em>La
+      jaula de oro</em>&nbsp;est&aacute;n ganando premios en los principales festivales
+      internacionales. Hay una combinaci&oacute;n muy saludable, ahora se siente una
+      industria m&aacute;s s&oacute;lida, considera el realizador.</p>\r\n<p style=\"text-align:
+      justify;\">Para mayor informaci&oacute;n de la pel&iacute;cula consultar:&nbsp;<a
+      href=\"https://www.facebook.com/CaseseQuienPueda\" target=\"_blank\">https://www.facebook.com/CaseseQuienPueda</a></p>\r\n<div>\r\n<p>&nbsp;</p>\r\n</div>"
+    imagen_destacada: /samples/noticias/casesequienpueda/NESP070404-500x261.jpg
+    fotos: []
+    categoria: internacionales
+    fuente: IMCINE
